[build-system]
requires = [
    "setuptools==82.0.0",
    "setuptools_scm==9.2.2",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "togax-frost"
version = "0.0.1"

# New Widgets
# [project.entry-points."togax_frost.backend.toga_android"]
# RenderCanvas = "togax_frost.android.render_canvas:RenderCanvas"

[project.entry-points."togax_frost.backend.toga_cocoa"]
RenderCanvas = "togax_frost.cocoa.render_canvas:RenderCanvas"

# [project.entry-points."togax_frost.backend.toga_gtk"]
# RenderCanvas = "togax_frost.gtk.render_canvas:RenderCanvas"

# [project.entry-points."togax_frost.backend.toga_iOS"]
# RenderCanvas = "togax_frost.iOS.render_canvas:RenderCanvas"

# [project.entry-points."togax_frost.backend.toga_qt"]
# RenderCanvas = "togax_frost.qt.render_canvas:RenderCanvas"

# [project.entry-points."togax_frost.backend.toga_textual"]
# RenderCanvas = "togax_frost.textual.render_canvas:RenderCanvas"

# [project.entry-points."togax_frost.backend.toga_web"]
# RenderCanvas = "togax_frost.web.render_canvas:RenderCanvas"

# [project.entry-points."togax_frost.backend.toga_winforms"]
# RenderCanvas = "togax_frost.winforms.render_canvas:RenderCanvas"
